--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
   </head>
   <body>
     <section>
@@ -24,16 +25,72 @@
         <ul class="center-nav">
           
           <li><i class="fas fa-house"></i><a href="#"> Dashboard </a></li>
-          <li><i class="fas fa-copy"></i><a href="#"> Users </a></li>
-          <li><i class="fas fa-chart-simple"></i><a href="#"> Reports </a></li>
-          <li><i class="fas fa-comment"></i><a href="#"> Suggestions </a></li>
-          <li>
-            <i class="fas fa-floppy-disk"></i><a href="#"> Saved Logs </a>
-          </li>
-        <ul class="bottom-nav">
-          <hr />
-          <li><i class="fas fa-gear"></i><a href="#"> Settings </a></li>
-          <li><i class="fas fa-power-off"></i><a href="#"> Logout </a></li>
+          
+
+<button class="accordion">
+  <i class="fas fa-copy"></i> Users
+</button>
+<div class="panel">
+  <ul>
+    <li><a href="#">Users 1</a></li>
+    <li><a href="#">Users 2</a></li>
+    <li><a href="#">Users 3</a></li>
+  </ul>
+</div>
+
+<button class="accordion">
+  <i class="fas fa-chart-simple"></i> Reports
+</button>
+<div class="panel">
+  <ul>
+    <li><a href="#">Report 1</a></li>
+    <li><a href="#">Report 2</a></li>
+    <li><a href="#">Report 3</a></li>
+  </ul>
+</div>
+
+<button class="accordion">
+  <i class="fas fa-comment"></i> Suggestions
+</button>
+<div class="panel">
+  <ul>
+    <li><a href="#">Suggestion 1</a></li>
+    <li><a href="#">Suggestion 2</a></li>
+    <li><a href="#">Suggestion 3</a></li>
+  </ul>
+</div>
+
+<button class="accordion">
+  <i class="fas fa-floppy-disk"></i> Saved Logs
+</button>
+<div class="panel">
+  <ul>
+    <li><a href="#">Saved Log 1</a></li>
+    <li><a href="#">Saved Log 2</a></li>
+    <li><a href="#">Saved Log 3</a></li>
+  </ul>
+</div>
+
+<button class="accordion">
+  <i class="fas fa-gear"></i> Settings
+</button>
+<div class="panel">
+  <ul>
+    <li><a href="#">Settings 1</a></li>
+    <li><a href="#">Settings 2</a></li>
+    <li><a href="#">Settings 3</a></li>
+  </ul>
+</div>
+
+<button class="accordion">
+  <i class="fas fa-power-off"></i> Logout
+</button>
+<div class="panel">
+  <ul>
+    <li><a href="#">Confirm Logout</a></li>
+  </ul>
+</div>
+
         </ul>
       </div>
 
